Remove license headers (#65)
* Remove license plugin

* Remove license header from files

* Update changelog release date

* Cleanup codeql action

* Fix sonar: Avoid varargs

* Fix sonar: Move constructor

---------

Co-authored-by: kaklakariada <kaklakariada@users.noreply.github.com>