@@ -1,28 +1,8 @@
-/**
- * holiday-calculator
- * Copyright (C) 2022 itsallcode <github@kuhnke.net>
- *
- * This program is free software: you can redistribute it and/or modify
- * it under the terms of the GNU General Public License as published by
- * the Free Software Foundation, either version 3 of the License, or
- * (at your option) any later version.
- *
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU General Public License for more details.
- *
- * You should have received a copy of the GNU General Public License
- * along with this program.  If not, see <http://www.gnu.org/licenses/>.
- */
 package org.itsallcode.holidays.calculator.logic.parser.matcher;
 
-import static java.util.stream.Collectors.toList;
-
-import java.time.DayOfWeek;
-import java.time.Month;
-import java.time.MonthDay;
+import java.time.*;
 import java.util.Arrays;
+import java.util.List;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
@@ -34,6 +14,41 @@ import org.itsallcode.holidays.calculator.logic.variants.Holiday;
  * Abstract class for matchers for holiday specifications.
  */
 public abstract class HolidayMatcher {
+
+	private static final Pattern MONTH_NAME_PATTERN = Pattern.compile(
+			Patterns.NAME_REGEXP, Pattern.CASE_INSENSITIVE);
+
+	private final AbbreviationParser<Month> monthNameParser = new AbbreviationParser<>(Month.class);
+	private final AbbreviationParser<DayOfWeek> dayOfWeekParser = new AbbreviationParser<>(DayOfWeek.class);
+	private final Pattern pattern;
+
+	private final HolidayMatcher originalMatcher;
+
+	/**
+	 * Create a new instance of a generic holiday matcher based on the provided
+	 * pattern.
+	 *
+	 * @param pattern pattern for detecting the current matcher to be used for
+	 *                parsing the holiday from the specification.
+	 */
+	protected HolidayMatcher(final Pattern pattern) {
+		this(null, pattern);
+	}
+
+	/**
+	 * Create a new instance of a generic holiday matcher based on the provided
+	 * matcher for the original date of the holiday and a pattern for additional
+	 * modifications, e.g. conditions, alternative dates, or time deltas from the
+	 * original date.
+	 *
+	 * @param originalMatcher matcher for the original holiday specification
+	 * @param pattern         pattern for detecting the current matcher to be used
+	 *                        for parsing the holiday from the specification.
+	 */
+	protected HolidayMatcher(final HolidayMatcher originalMatcher, final Pattern pattern) {
+		this.originalMatcher = originalMatcher;
+		this.pattern = pattern;
+	}
 
 	/**
 	 * Return a list of all available holiday specification matchers.
@@ -57,41 +72,6 @@ public abstract class HolidayMatcher {
 
 	abstract Holiday createHoliday(Matcher matcher);
 
-	private static final Pattern MONTH_NAME_PATTERN = Pattern.compile(
-			Patterns.NAME_REGEXP, Pattern.CASE_INSENSITIVE);
-
-	private final AbbreviationParser<Month> monthNameParser = new AbbreviationParser<>(Month.class);
-	private final AbbreviationParser<DayOfWeek> dayOfWeekParser = new AbbreviationParser<>(DayOfWeek.class);
-	private final Pattern pattern;
-
-	private final HolidayMatcher originalMatcher;
-
-	/**
-	 * Create a new instance of a generic holiday matcher based on the provided
-	 * pattern.
-	 *
-	 * @param pattern pattern for detecting the current matcher to be used for
-	 *                parsing the holiday from the specification.
-	 */
-	protected HolidayMatcher(Pattern pattern) {
-		this(null, pattern);
-	}
-
-	/**
-	 * Create a new instance of a generic holiday matcher based on the provided
-	 * matcher for the original date of the holiday and a pattern for additional
-	 * modifications, e.g. conditions, alternative dates, or time deltas from the
-	 * original date.
-	 *
-	 * @param originalMatcher matcher for the original holiday specification
-	 * @param pattern         pattern for detecting the current matcher to be used
-	 *                        for parsing the holiday from the specification.
-	 */
-	protected HolidayMatcher(HolidayMatcher originalMatcher, Pattern pattern) {
-		this.originalMatcher = originalMatcher;
-		this.pattern = pattern;
-	}
-
 	/**
 	 * Return the original holiday specified, e.g. if the condition is
 	 * {@code false}.
@@ -100,7 +80,7 @@ public abstract class HolidayMatcher {
 	 *                the original holiday
 	 * @return the original holiday
 	 */
-	protected Holiday createOriginalHoliday(Matcher matcher) {
+	protected Holiday createOriginalHoliday(final Matcher matcher) {
 		return originalMatcher.createHoliday(matcher);
 	}
 
@@ -110,7 +90,7 @@ public abstract class HolidayMatcher {
 	 * @param line textual specification for the holiday
 	 * @return holiday parsed from the specification
 	 */
-	public Holiday createHoliday(String line) {
+	public Holiday createHoliday(final String line) {
 		final Matcher matcher = pattern.matcher(line);
 		if (!matcher.matches()) {
 			return null;
@@ -124,7 +104,7 @@ public abstract class HolidayMatcher {
 	 * @param arg (abbreviated) name of month or number as String
 	 * @return number of month as integer
 	 */
-	protected int monthNumber(String arg) {
+	protected int monthNumber(final String arg) {
 		if (MONTH_NAME_PATTERN.matcher(arg).matches()) {
 			return monthNameParser.getEnumFor(arg).getValue();
 		} else {
@@ -141,7 +121,7 @@ public abstract class HolidayMatcher {
 	 *                   from
 	 * @return {@link MonthDay} instance
 	 */
-	protected MonthDay monthDay(Matcher matcher, String monthGroup, String dayGroup) {
+	protected MonthDay monthDay(final Matcher matcher, final String monthGroup, final String dayGroup) {
 		return MonthDay.of(monthNumber(matcher.group(monthGroup)), Integer.parseInt(matcher.group(dayGroup)));
 	}
 
@@ -154,7 +134,7 @@ public abstract class HolidayMatcher {
 	 *               either "Tuesday" or "Thursday".
 	 * @return {@link DayOfWeek} instance
 	 */
-	protected DayOfWeek dayOfWeek(String prefix) {
+	protected DayOfWeek dayOfWeek(final String prefix) {
 		return dayOfWeekParser.getEnumFor(prefix);
 	}
 
@@ -165,11 +145,10 @@ public abstract class HolidayMatcher {
 	 * @param commaSeparatedList string to parse the days of week from
 	 * @return list of instances of {@link DayOfWeek}
 	 */
-	protected DayOfWeek[] daysOfWeek(String commaSeparatedList) {
+	protected List<DayOfWeek> daysOfWeek(final String commaSeparatedList) {
 		return Arrays.asList(commaSeparatedList.split(","))
 				.stream().map(this::dayOfWeek)
-				.collect(toList())
-				.toArray(new DayOfWeek[0]);
+				.toList();
 	}
 
 	/**
@@ -180,7 +159,7 @@ public abstract class HolidayMatcher {
 	 *                for the condition
 	 * @return condition builder
 	 */
-	protected ConditionBuilder createConditionBuilder(Matcher matcher) {
+	protected ConditionBuilder createConditionBuilder(final Matcher matcher) {
 		return new ConditionBuilder()
 				.withDaysOfWeek(daysOfWeek(matcher.group(Patterns.PIVOT_DAYS_OF_WEEK_GROUP)));
 	}
